@@ -6,7 +6,6 @@ If you are working or plan to work on a task here put your name by it.
 Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Make sure partitioning somewhat works. (agaffney)
-		Switch most outputs to tty8 (codeman)
 		i gotta check for dhcp in the network stuff and emerge it if necessary?
 		<agaffney> codeman: ok, so addNotification("warning", ...) for something
 		  that failed but isn't a big deal, 'raise GLIException("blah", 
@@ -33,3 +32,4 @@ Done:
 Add custom kernel code. (codeman)
 Fix bootloader code for udev. (codeman)
 Add rest of add_users and fix overwriting user info bug (codeman and agaffney)
+Switch most outputs to tty8 (codeman)
