@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.62 2005/02/02 05:29:27 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.63 2005/02/04 00:03:25 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  3 Feb 2005; Preston Cody <codeman@gentoo.org>
+  Some big changes.  First, changed most output to display_on_tty8.
+  Second, added log lines to all templates.  Some smaller fixes such as typos.
+  Also did some cleanups of old commented lines.
 
   1 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed tty8 output to a fifo. Minor GLIStorageDevice fix thanks to BenUrban.
